# cpp-boiler

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: c-cpp.yml
cmake/: SetupBuildPath.cmake  SetupGoogleTest.cmake
src/: CMakeLists.txt
src/hello-app/: CMakeLists.txt  main.cpp
src/hello-lib/: CMakeLists.txt  hello.cpp  hello.h
tests/: CMakeLists.txt  test_hello.cpp
