#-----------------------------------------------------------------

cmake_minimum_required(VERSION 3.10)

#-----------------------------------------------------------------

project(cpp-boiler C CXX)

#-----------------------------------------------------------------

add_subdirectory("src")

#-----------------------------------------------------------------
