#-----------------------------------------------------------------

cmake_minimum_required(VERSION 3.14)

#-----------------------------------------------------------------

project(cpp-boiler C CXX)

#-----------------------------------------------------------------

set(CMAKE_CXX_STANDARD 17)

#-----------------------------------------------------------------

include(${CMAKE_SOURCE_DIR}/cmake/SetupBuildPath.cmake)

#-----------------------------------------------------------------

include(${CMAKE_SOURCE_DIR}/cmake/SetupGoogleTest.cmake)
enable_testing()

#-----------------------------------------------------------------

add_subdirectory("src")
add_subdirectory("tests")

#-----------------------------------------------------------------
