#-----------------------------------------------------------------

set(TARGET_NAME tests)

#-----------------------------------------------------------------

set(MODULES
  hello-lib
  gtest
  gtest_main
)

#-----------------------------------------------------------------

set(TEST_FILES
  test_hello.cpp
)

#-----------------------------------------------------------------

add_executable(${TARGET_NAME}
  ${TEST_FILES}
)

#-----------------------------------------------------------------

target_link_libraries(${TARGET_NAME}
  ${MODULES}
)

#-----------------------------------------------------------------

include(GoogleTest)
gtest_discover_tests(${TARGET_NAME})

#-----------------------------------------------------------------
