#-----------------------------------------------------------------

set(TARGET_NAME hello-lib)

#-----------------------------------------------------------------

set(SRC_FILES
  hello.cpp
  hello.h
)

#-----------------------------------------------------------------

add_library(${TARGET_NAME}
  STATIC
  ${SRC_FILES}
)

#-----------------------------------------------------------------

target_include_directories(${TARGET_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

#-----------------------------------------------------------------
